2008-04-18  Yohann Ferreira  <bertram@cegetel.net>

	* src/gui/char_select.h, src/gui/char_select.cpp,
	src/gui/unregisterdialog.h, src/gui/unregisterdialog.cpp,
	src/main.cpp, src/main.h, src/logindata.h,
	src/gui/changepassworddialog.h, src/gui/changepassworddialog.cpp,
	src/CMakeLists.txt: Added a change password dialog. State code is to
	be reworked.
	* src/localplayer.h, src/localplayer.cpp: limited keyboard walk message
	flooding to one every 1/10 sec.
	* src/main.h, src/main.cpp, src/net/loginhandler.cpp,
	src/net/logouthandler.cpp, src/gui/unregisterdialog.cpp,
	src/gui/changepassworddialog.cpp: Made Unregister and change password
	functionnal, at least client-side.

2008-04-18  David Athay  <ko2fan@gmail.com>

	* src/gui/chat.h, src/gui/widgets/tabbedarea.h, 
	src/gui/widgets/tabbedarea.cpp, src/gui/chat.cpp, 
	src/gui/guildwindow.cpp, src/gui/gui.cpp, src/CMakeLists.txt,
	src/net/guildhandler.cpp, src/net/chathandler.cpp, src/Makefile.am,
	tmw.cbp: Fixed numerous crashes with chat and guild windows using new
	tabbed area.

2008-04-17  David Athay  <ko2fan@gmail.com>

	* src/player.cpp, src/player.h, src/net/partyhandler.h,
	src/net/guildhandler.h, src/net/partyhandler.cpp,
	src/net/guildhandler.cpp, src/net/chatserver/party.cpp,
	src/net/chatserver/party.h, src/localplayer.h: Added basic party 
	support.

2008-04-17  Yohann Ferreira <bertram@cegetel.net>

	* src/gui/progressbar.h, src/gui/progressbar.cpp: Added smooth
	changes in progressbar.
	* src/net/chatserver/chatserver.h: One file was forgotten into the
	private channels removal.
	* src/localplayer.h, src/localplayer.cpp, src/gui/viewport.cpp,
	src/main.h, src/main.cpp: Added input type parameter to the 
	LocalPlayer::SetDestination methods in order to keep control over
	message flooding to the server with mouse dragging. Moved Mouse calls
	flooding control into viewport to avoid calling setDestination
	unecessarily.
	* Fixed a crash when clicking on 'Quit Guild' Button. Also disabled