@@ -75,6 +75,7 @@ enum {
     STATE_LOADDATA,
     STATE_LOGIN,
     STATE_LOGIN_ATTEMPT,
+    STATE_LOGIN_ERROR,
     STATE_REGISTER,
     STATE_REGISTER_ATTEMPT,
     STATE_ACCOUNTCHANGE_ERROR,
